Started to get the java version of bitrepository upgraded